--- a/app/views/news/_form.html.erb
+++ b/app/views/news/_form.html.erb
@@ -8,7 +8,7 @@
 
   <p><%= f.text_area :description, :required => true, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
   <% if f.object.is_quesito? %>
-      <p><%= submit_tag l(:button_news_update_txt), :name => 'change_quesito', :class => 'button-blu' unless f.object.new_record? %></p>
+      <p><%= submit_tag l(:button_news_update_txt), :name => 'change_only_quesito', :class => 'button-blu' unless f.object.new_record? %></p>
       <%= f.object.quesito_status_fs_text %>
       <p><%= f.text_area :reply %></p>
       <%# render :partial => 'form_reply_fast', :locals => { :news => f } %>
