--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="title" content="Professionisti esperti in materie fiscali sportive"/>
   <meta name="description" content="Visita il sito fiscosport per tenerti sempre aggiornato"/>
-  <link rel="image_src" type="image/jpeg" href="http://37.59.40.44:88/images/ico/fs.png"/>
+  <link rel="image_src" type="image/jpeg" href='<%="#{request.protocol}#{request.host_with_port}/images/ico/fs.png" %>'/>
   <%= csrf_meta_tag %>
   <%#<meta name="csrf-token" content="<%= form_authenticity_token % >" />
   <meta name="csrf-param" content="authenticity_token" />
