--- a/app/views/account/password_recovery.html.erb
+++ b/app/views/account/password_recovery.html.erb
@@ -2,16 +2,20 @@
 
 <%= error_messages_for 'user' %>
 
-<% form_tag({:token => @token.value}) do %>
-<div class="box tabular">
-<p><label for="new_password"><%=l(:field_new_password)%> <span class="required">*</span></label>
-<%= password_field_tag 'new_password', nil, :size => 25 %><br />
-<em><%= l(:text_caracters_minimum, :count => Setting.password_min_length) %></em></p>
+<% if @token && !@token.nil? %>
+  <% form_tag({:token => @token.value}) do %>
+  <div class="box tabular">
+  <p><label for="new_password"><%=l(:field_new_password)%> <span class="required">*</span></label>
+  <%= password_field_tag 'new_password', nil, :size => 25 %><br />
+  <em><%= l(:text_caracters_minimum, :count => Setting.password_min_length) %></em></p>
 
-<p><label for="new_password_confirmation"><%=l(:field_password_confirmation)%> <span class="required">*</span></label>
-<%= password_field_tag 'new_password_confirmation', nil, :size => 25 %></p>
-</div>
-<p><%= submit_tag l(:button_save) %></p>
+  <p><label for="new_password_confirmation"><%=l(:field_password_confirmation)%> <span class="required">*</span></label>
+  <%= password_field_tag 'new_password_confirmation', nil, :size => 25 %></p>
+  </div>
+  <p><%= submit_tag l(:button_save) %></p>
+  <% end %>
+<% else %>
+  <p>Non è stato possibile ottenere i vostri dati d'utente. Riprovare da capo la procedura.</p>
 <% end %>
 
 <% if Setting.lost_password? %>
