--- a/app/views/news/showabstract.html.erb
+++ b/app/views/news/showabstract.html.erb
@@ -1,4 +1,5 @@
 <div class="contextual">
+  zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz abstract
 <%= link_to(l(:button_edit),
       edit_news_path(@news),
       :class => 'icon icon-edit',
