--- a/app/views/issues/_form.html.erb
+++ b/app/views/issues/_form.html.erb
@@ -59,11 +59,12 @@
 <% end %>
 
 <% if @issue.new_record? && User.current.allowed_to?(:add_issue_watchers, @project) -%>
-    <p id="watchers_form"><label><%= l(:label_issue_watchers) %></label>
+    <div id="watchers_form"><label><%= l(:label_issue_watchers) %></label> <br/>
       <% @issue.project.users.sort.each do |user| -%>
-          <label class="floating"><%= check_box_tag 'issue[watcher_user_ids][]', user.id, @issue.watched_by?(user) %> <%= h user %></label>
+        <div class="floating-items3"><%= check_box_tag 'issue[watcher_user_ids][]', user.id, @issue.watched_by?(user) %>
+          <%= h user %></div>
       <% end -%>
-    </p>
+    </div>
 <% end %>
 
 <%= call_hook(:view_issues_form_details_bottom, {:issue => @issue, :form => f}) %>
