--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= issue_heading(@issue) %></h2>
 
-<div class="<%= @issue.css_classes %> details <%= @issue.css_box()%>">
+<div class="<%= @issue.css_classes %> details <%= @issue.css_box() %>">
   <%= avatar(@issue.author, {:size => "50", :class => "no-div"}) %>
   <div class="subject">
     <%= render_issue_subject_with_tree(@issue) %>
@@ -81,11 +81,11 @@
 
   <% if @issue.description? || @issue.attachments.any? -%>
       <p><strong>
-      <% if @issue.is_quesito? %>
-        <%= l(:news_reply_text, :num => link_to(@issue.quesito_news.id.to_s, news_path(@issue.quesito_news), { :class => 'icon icon-news_reply_done', :target => '_blank'})) %>
-      <% else %>
-        <%= l(:content_articolo) %>
-      <% end %>
+        <% if @issue.is_quesito? %>
+            <%= l(:news_reply_text, :num => link_to(@issue.quesito_news.id.to_s, news_path(@issue.quesito_news), {:class => 'icon icon-news_reply_done', :target => '_blank'})) %>
+        <% else %>
+            <%= l(:content_articolo) %>
+        <% end %>
       </strong></p>
       <% if @issue.description? %>
           <div class="contextual">
@@ -102,52 +102,73 @@
       <%= link_to_attachments @issue %>
   <% end -%>
   <%= call_hook(:view_issues_show_description_bottom, :issue => @issue) %>
+
   <% if @relations.present? || User.current.allowed_to?(:manage_issue_relations, @project) %>
       <hr/>
       <div id="relations">
         <%= render :partial => 'relations' %>
       </div>
   <% end %>
+
+  <br/> <!-- bottone pubblica issue  o vedi news-->
+
+  <div style="text-align: center;">
+    <hr>
+    <% form_for @issue, :url => {:controller => 'issue_moves', :action => 'new', :id => @issue} do |f2| %>
+        <p class="published-<%= @issue.is_public_fs?.to_s %>">
+          <%= l("label_reply_published" + @issue.is_public_fs?.to_s).to_sym %> <br/>&nbsp;</p>
+        <% if @issue.quesito_news.is_quesito? %>
+            <% if authorize_for('move_issues', 'news_fast_reply') || User.current.admin? || User.current.ismanager? %>
+                <%= f2.submit(l(:button_issue_reply_article), :class => "button-blu") unless @issue.is_public_fs? %>
+            <% end %>
+
+            <% if  @issue.is_public_fs? %>
+                <%= link_to l(:button_news_from_issue), news_path(@issue.news_id), :class => "button-grey" %>
+            <% end %>
+        <% end %>
+    <% end %>
+  </div>
 </div>
-<%# se l'edizione e di tipo QUESITO. Se c'è una risposta allora spostare in edizione reale  %>
+<%# se l'edizione e di tipo QUESITO quindi non pubblicato  %>
 <% if @issue.is_quesito? %>
-    <div class="box details <%= @issue.css_box()%>">
-      <div class="">
-        <div id="question" style="margin-bottom:16px;">
-          <%= "Stato del quesito: " + @issue.quesito_news.quesito_status_fs_text %>
-          <%= link_to @issue.quesito_news.abbr_name, news_path(@issue.quesito_news) %>
-          <%= @issue.quesito_news.summary %>
+    <div class="box details <%= @issue.css_box() %>">
+      <div style="background-color: #fff;">
+        <h3 class="noborder gradient-dx-blu "><%= l(:label_news) %></h3>
+
+        <div id="div_issues_responses " xmlns="http://www.w3.org/1999/html">
+          <% if @issue.quesito_news.is_quesito? %>
+              <div>
+                <%= @issue.quesito_news.get_state_icons_fe %>
+                <%= @issue.quesito_news.quesito_status_fs_text_be %>
+
+                <div id="question" style="margin-bottom:1%; padding: 2%;">
+                  <%= link_to @issue.quesito_news.abbr_name, news_path(@issue.quesito_news) %>
+                  <%= @issue.quesito_news.summary %>
+                  <%= @issue.quesito_news.description %>
+                  <p class="btn-footer"><%= link_to "Visualizza il quesito", news_path(@issue.quesito_news), :class => "button-grey" %> </p>
+                </div>
+              </div>
+          <% end %>
         </div>
-        <hr/>
-        <div id="responses" style="margin-bottom:16px;">
-          <% if @issue.description? %>
-          <%# per generare la risposta la descrizione deve contenere testo %>
-              <% if @issue.quesito_news.is_issue_reply? %>
-                  <% form_for @issue, :url => {:controller => 'issue_moves', :action => 'news_reply', :id => @issue} do |f_r| %>
-                      <%= f_r.error_messages %>
-                      <%= f_r.hidden_field :id, :value => @issue.id %>
-                      <h4><%= l(:label_fast_reply) %></h4>
-                      <% if authorize_for('move_issues', 'news_fast_reply') || User.current.admin? || User.current.ismanager? %>
-                          <%= f_r.submit(l(:button_issue_reply_article), :class => "button-blu") %>
-                      <% end %>
-                  <% end %>
-              <% end %>
-              <hr>
-              <% form_for @issue, :url => {:controller => 'issue_moves', :action => 'new', :id => @issue} do |f2| %>
-                  <h4><%= l(:label_reply_article) %></h4>
-                  <% if authorize_for('move_issues', 'news_fast_reply') || User.current.admin? || User.current.ismanager? %>
-                      <%= f2.submit(l(:button_issue_reply_article), :class => "button-blu") %>
-                  <% end %>
-              <% end %>
-          <% else %>
-              <p>per creare una <span style="color: red;">risposta*</span> e generare un articolo che andrà a finire su una edizione allora dovete scrivere la risposta nel campo
+      </div>
+      <br/>
+    </div> <!-- div_issues_responses -->
+    <div class="box details <%= @issue.css_box() %>">
+      <div style="background-color: #fff;">
+        <h3 class="noborder gradient-dx-blu "><%= l(:field_respreq) %></h3>
+
+        <div id="responses" style="margin-bottom:1%; padding: 1%; ">
+          <% unless @issue.description? %>
+              <p>per creare una <span style="color: red;">risposta*</span> e generare un articolo che andrà a finire su
+                una edizione allora dovete scrivere la risposta nel campo
                 <b><%= l(:content_articolo) %></b></p>
           <% end %>
           <div class="responses">
-            <%= render :partial => 'show_quesito_other_issues', :locals => { :issue => @issue } %>
+            <%= render :partial => 'show_quesito_other_issues', :locals => {:issue => @issue} %>
           </div>
         </div>
       </div>
+
     </div>
 <% end %>
 <% if @issue.is_convegno? %>
