--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,90 +1,128 @@
+<div class="splitcontentleft-l">
+<!--   debug   per il default numero news
+<h3><%#	@news.quesito_new_default_title(user=User.current) +  Date.today.to_s + " -> " +@news.created_on.to_s  %> </h3>
+   -->
 <div class="contextual">
-<%= watcher_tag(@news, User.current) %>
-<% if !@news.is_quesito? %>
-  <%# Una news di tipo quesito non può essere modificata? %>
-  <%= link_to(l(:button_edit),
-        edit_news_path(@news),
-        :class => 'icon icon-edit',
-        :accesskey => accesskey(:edit),
-        :onclick => 'Element.show("edit-news"); return false;') if User.current.allowed_to?(:manage_news, @project) %>
-<% end %>
-<%= link_to(l(:button_delete),
-      news_path(@news),
-      :confirm => l(:text_are_you_sure),
-      :method => :delete,
-      :class => 'icon icon-del') if User.current.allowed_to?(:manage_news, @project) %>
+  <%= watcher_tag(@news, User.current) %>
+  <% if !@news.is_quesito? %>
+      <%# Una news di tipo quesito non può essere modificata? %>
+      <%= link_to(l(:button_edit),
+                  edit_news_path(@news),
+                  :class => 'icon icon-edit',
+                  :accesskey => accesskey(:edit),
+                  :onclick => 'Element.show("edit-news"); return false;') if User.current.allowed_to?(:manage_news, @project) %>
+  <% end %>
+  <%= link_to(l(:button_delete),
+              news_path(@news),
+              :confirm => l(:text_are_you_sure),
+              :method => :delete,
+              :class => 'icon icon-del') if User.current.allowed_to?(:manage_news, @project) %>
 </div>
 
-<h2><%= avatar(@news.author, { :size => "24", :class => "no-div" }) %><%=h @news.title %></h2>
+<h3><%= avatar(@news.author, {:size => "16", :class => "no-div"}) %><%= h @news.title %></h3>
 <% if !@news.is_quesito? %>
-  <% if authorize_for('news', 'edit') %>
-    <div id="edit-news" style="display:none;">
+    <% if authorize_for('news', 'edit') %>
+        <div id="edit-news" style="display:none;">
 
-    <% labelled_tabular_form_for :news, @news, :url => news_path(@news),
-                                               :html => { :id => 'news-form', :method => :put } do |f| %>
-    <%= render :partial => 'form', :locals => { :f => f } %>
-    <%= submit_tag l(:button_save) %>
-    <%= link_to_remote l(:label_preview),
-                       { :url => preview_news_path(:project_id => @project),
-                         :method => 'get',
-                         :update => 'preview',
-                         :with => "Form.serialize('news-form')"
-                       }, :accesskey => accesskey(:preview) %> |
-    <%= link_to l(:button_cancel), "#", :onclick => 'Element.hide("edit-news"); return false;' %>
+          <% labelled_tabular_form_for :news, @news, :url => news_path(@news),
+                                       :html => {:id => 'news-form', :method => :put} do |f| %>
+              <%= render :partial => 'form', :locals => {:f => f} %>
+              <%= submit_tag l(:button_save) %>
+              <%= link_to_remote l(:label_preview),
+                                 {:url => preview_news_path(:project_id => @project),
+                                  :method => 'get',
+                                  :update => 'preview',
+                                  :with => "Form.serialize('news-form')"
+                                 }, :accesskey => accesskey(:preview) %> |
+              <%= link_to l(:button_cancel), "#", :onclick => 'Element.hide("edit-news"); return false;' %>
+          <% end %>
+          <div id="preview" class="wiki"></div>
+        </div>
     <% end %>
-    <div id="preview" class="wiki"></div>
-    </div>
-  <% end %>
 <% end %>
 
-<div class="splitcontentleft">
 <%#           CONTENUTO NEWS          %>
-  <p> <%= link_to(l(:button_edit),
-           edit_news_path(@news),
-           :class => 'icon icon-edit',
-           :accesskey => accesskey(:edit),
-           :onclick => 'Element.show("edit-news"); return false;') if User.current.allowed_to?(:manage_news, @project) %>
-           </p>
-
-  <p><% unless @news.summary.blank? %><em><%=h @news.summary %></em><br /><% end %>
-  <span class="author"><%= authoring @news.created_on, @news.author %></span></p>
-  <div class="wiki">
-  <%= textilizable(@news.description) %>
+  <% if User.current.admin? %>
+  <div style="width: 100%; text-align: right;"> <%= link_to(l(:button_edit_news),
+                  edit_news_path(@news),
+                  :class => 'icon icon-edit',
+                  :accesskey => accesskey(:edit),
+                  :onclick => 'Element.show("edit-news"); return false;') if User.current.allowed_to?(:manage_news, @project) %>
   </div>
-  <br />
-  <%= render :partial => 'form_reply_fast', :locals => { :news => @news } %>
+  <% end %>
+  <div class="box risposta">
+    <% unless @news.summary.blank? %><em><%= h @news.summary %></em><br/>
+    <% end %>
+    <span class="author"><%= authoring @news.created_on, @news.author %></span>
 
+  <div class="rispostatxt">
+    <%= raw(@news.description) %>
+  </div></div>
+  <br/>
+  <%= render :partial => 'form_reply_fast', :locals => {:news => @news} %>
 <%#           COMMENTI LEGALTI ALLA NEWS          %>
+
+ <!---
   <div id="comments" style="margin-bottom:16px;">
-  <h3 class="comments"><%= l(:label_comment_plural) %></h3>
-  <% @comments.each do |comment| %>
-      <% next if comment.new_record? %>
-      <div class="contextual">
-      <%= link_to_if_authorized image_tag('delete.png'), {:controller => 'comments', :action => 'destroy', :id => @news, :comment_id => comment},
-                                                         :confirm => l(:text_are_you_sure), :method => :delete, :title => l(:button_delete) %>
-      </div>
-      <h4><%= avatar(comment.author, { :size => "24", :class => "no-div" }) %><%= authoring comment.created_on, comment.author %></h4>
-      <%= textilizable(comment.comments) %>
-  <% end if @comments.any? %>
+    <h3 class="comments"><%= l(:label_comment_plural) %></h3>
+    <% @comments.each do |comment| %>
+        <% next if comment.new_record? %>
+        <div class="contextual">
+          <%= link_to_if_authorized image_tag('delete.png'), {:controller => 'comments', :action => 'destroy', :id => @news, :comment_id => comment},
+                                    :confirm => l(:text_are_you_sure), :method => :delete, :title => l(:button_delete) %>
+        </div>
+        <h4><%= avatar(comment.author, {:size => "24", :class => "no-div"}) %><%= authoring comment.created_on, comment.author %></h4>
+        <%= textilizable(comment.comments) %>
+    <% end if @comments.any? %>
   </div>
 
   <% if authorize_for 'comments', 'create' %>
-    <p><%= toggle_link l(:label_comment_add), "add_comment_form", :focus => "comment_comments" %></p>
-    <% form_tag({:controller => 'comments', :action => 'create', :id => @news}, :id => "add_comment_form", :style => "display:none;") do %>
-      <div class="box">
-          <%= text_area 'comment', 'comments', :cols => 80, :rows => 15, :class => 'wiki-edit' %>
-          <%= wikitoolbar_for 'comment_comments' %>
-      </div>
-      <p><%= submit_tag l(:button_add) %></p>
-    <% end %>
+      <p><%= toggle_link l(:label_comment_add), "add_comment_form", :focus => "comment_comments" %></p>
+      <% form_tag({:controller => 'comments', :action => 'create', :id => @news}, :id => "add_comment_form", :style => "display:none;") do %>
+          <div class="box">
+            <%= text_area 'comment', 'comments', :cols => 80, :rows => 15, :class => 'wiki-edit' %>
+            <%= wikitoolbar_for 'comment_comments' %>
+          </div>
+          <p><%= submit_tag l(:button_add) %></p>
+      <% end %>
   <% end %>
-
+ -->
   <% html_title @news.title -%>
 
   <% content_for :header_tags do %>
-    <%= stylesheet_link_tag 'scm' %>
+      <%= stylesheet_link_tag 'scm' %>
   <% end %>
-
+  <%= render :partial => 'show_quesito_issues_items', :locals => {:news => @news} unless @news.is_wait_reply?  %>
 </div>
+<div class="splitcontentright-s">
+<% if @news.is_fast_reply? %>
+<%= render :partial => 'show_quesito_fast_reply', :locals => {:news => @news} %>
+<% else %>
+<%= render :partial => 'show_quesito_issues', :locals => {:news => @news} %>
+<% end %>
+  <div>
+  <div id="comments" style="margin-bottom:16px;">
+      <h3 class="comments"><%= l(:label_comment_plural) %></h3>
+      <% @comments.each do |comment| %>
+          <% next if comment.new_record? %>
+          <div class="contextual">
+            <%= link_to_if_authorized image_tag('delete.png'), {:controller => 'comments', :action => 'destroy', :id => @news, :comment_id => comment},
+                                      :confirm => l(:text_are_you_sure), :method => :delete, :title => l(:button_delete) %>
+          </div>
+          <h4><%= avatar(comment.author, {:size => "24", :class => "no-div"}) %><%= authoring comment.created_on, comment.author %></h4>
+          <%= textilizable(comment.comments) %>
+      <% end if @comments.any? %>
+    </div>
 
-<%= render :partial => 'show_quesito_issues', :locals => { :news => @news } %>
+    <% if authorize_for 'comments', 'create' %>
+        <p><%= toggle_link l(:label_comment_add), "add_comment_form", :focus => "comment_comments" %></p>
+        <% form_tag({:controller => 'comments', :action => 'create', :id => @news}, :id => "add_comment_form", :style => "display:none;") do %>
+            <div class="box">
+              <%= text_area 'comment', 'comments', :cols => 80, :rows => 15, :class => 'wiki-edit' %>
+              <%= wikitoolbar_for 'comment_comments' %>
+            </div>
+            <p><%= submit_tag l(:button_add) %></p>
+        <% end %>
+    <% end %>
+  </div>
+</div>
