--- a/app/views/settings/_general.html.erb
+++ b/app/views/settings/_general.html.erb
@@ -8,8 +8,8 @@
       </div>
 
     <div class="box tabular settings">
-      <p><%= setting_text_area :info_fs, :cols => 60, :rows => 5 %></p>
-
+      <p><%= setting_text_area :info_fs, :cols => 60, :rows => 4 %></p>
+      <p><%= setting_text_area :footer_fs, :cols => 60, :rows => 2 %></p>
       <p><%= setting_check_box :info_promoted_fs %></p>
     </div>
 
@@ -48,6 +48,7 @@
     <div class="btn-footer"><%= submit_tag l(:button_save), :class => 'button-grey' %></div>
 <% end %>
 <script type="text/javascript">
-    CKEDITOR.replace('settings_info_fs', { toolbar:'Light'});
+    CKEDITOR.replace('settings_info_fs', { toolbar:'Light', height:'180' });
+    CKEDITOR.replace('settings_footer_fs', { toolbar:'Light', height:'180' });
 </script>
 
