--- a/app/views/settings/_general.html.erb
+++ b/app/views/settings/_general.html.erb
@@ -8,9 +8,12 @@
       </div>
 
     <div class="box tabular settings">
+
       <p><%= setting_text_area :info_fs, :cols => 60, :rows => 4 %></p>
-      <p><%= setting_text_area :footer_fs, :cols => 60, :rows => 2 %></p>
       <p><%= setting_check_box :info_promoted_fs %></p>
+      <br>
+      <p><%= setting_text_area :footer_fs %></p>
+
     </div>
 
     <div class="box tabular settings">
