--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -57,4 +57,8 @@
 <% end %>
 <% end %>
 
+<% content_for :sidebar do %>
+<%= render :partial => 'activities/sticky_notes' %>
+ <% end %>
+
 <% html_title(l(:label_activity), @author) -%>
