--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1547,3 +1547,46 @@ hr.quesiti hr {
 .markblu h3{
     color: #2A5685;
 }
+#notes ul {
+    margin:  0!important;
+    padding: 0!important;
+}
+#notes p {
+    position: relative;
+    width: 86%;
+    min-height: 100px;
+    margin: 30px 0;
+    padding: 24px 10px ;
+    border-radius:3px;
+    background: -webkit-linear-gradient(#F9EFAF, #F7E98D);
+    background: -moz-linear-gradient(#F9EFAF, #F7E98D);
+    background: -o-linear-gradient(#F9EFAF, #F7E98D);
+    background: -ms-linear-gradient(#F9EFAF, #F7E98D);
+    background: linear-gradient(#F9EFAF, #F7E98D);
+    box-shadow:0 4px 6px rgba(0,0,0,0.1);
+    transition:box-shadow 0.5s ease;
+    font-smoothing:subpixel-antialiased;
+    }
+#notes p:hover { box-shadow:0 5px 8px rgba(0,0,0,0.15); }
+#notes p:focus { box-shadow:0 5px 12px rgba(0,0,0,0.2); outline:none; }
+#notes p:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 33%;
+    top: -15px;
+    width: 75px;
+    height: 25px;
+    z-index: 2;
+    background-color: rgba(255, 244, 172, 0.48);
+    border: 2px solid rgba(255,255,255,0.5);
+    -webkit-box-shadow: 0 0 5px #c5c5c5;
+    -moz-box-shadow: 0 0 5px #c5c5c5;
+    box-shadow: 2px 2px 2px #c5c5c5;
+    -webkit-transform: rotate(-6deg);
+    -moz-transform: rotate(-6deg);
+    -o-transform: rotate(-6deg);
+}
+
+
+
