prima versione di layout responsive per phone e tablet

--- a/app/views/editorial/_blocco_eventi.html.erb
+++ b/app/views/editorial/_blocco_eventi.html.erb
@@ -1,8 +1,7 @@
-<div class="clearfix">
+<div class="fs-block clearfix">
   <div class="fs-blockheader">
     <h3 class="t">Convegni ed Eventi</h3>
   </div>
-
   <div class="fs-blockcontent" style="margin-top: 5px;">
     <% if @conv_prossimo.nil? %>
         <div> Nessun evento o convegno previsto.
@@ -53,3 +52,4 @@
     <% end %>
   </div>
 </div>
+
