--- a/app/views/editorial/edizioni.html.erb
+++ b/app/views/editorial/edizioni.html.erb
@@ -7,7 +7,7 @@
 <% acur = 0 %>
 <% x= false %>
 
-<div class="fs-blockcontent" style="width:676px; float: left; padding-top:35px;">
+<div class="fs-blockcontent" style="width:88%; float: left; padding-top:35px;">
    <div id="accordion">
     <% @projects.each do |prj| %>
         <% acur = prj.data_dal.strftime("%Y").to_i %>
