--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -72,7 +72,7 @@
 }
 
 /*blocco tramenu */
-#fs-tramenu-wrapper {
+.fs-tramenu-wrapper {
     position: relative;
     width: 100%;
     min-height: 125px;
@@ -438,11 +438,18 @@ h3.fs-postheader {
     text-align: center;
 }
 
+.fs-chisiamo-boxminwidt{
+    width: 49%; float:left; min-width: 286px;
+}
+.fs-chisiamo-boxminwidt2{
+    width: 98%; float:left; min-width: 286px;
+}
 .fs-chisiamo-item2 {
     width: 48%;
-    float: left;
     display: table;
     margin: 5px;
+    float:left;
+    min-width: 285px
 }
 
 .fs-chisiamo-item {
@@ -504,6 +511,19 @@ h3.fs-postheader {
     width: 100%;
     margin-top: 7px;
 }
+.fs-post-profile2 {
+    background: #FFFFFF;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.1);
+    padding: 5px;
+    width: 100%;
+    margin-top: 7px;
+}
+
 
 #fs-photo-edit {
     width: 240px;
@@ -2003,7 +2023,7 @@ h3.fs-postheader {
 .banners_block_l_carousel {
     padding: 0;
     position: relative;
-    width: 100%;
+    width: 256px;
     overflow: hidden;
 }
 
