--- a/app/views/mio_profilo/account.html.erb
+++ b/app/views/mio_profilo/account.html.erb
@@ -137,7 +137,7 @@
           <%= f.hidden_field :comune_id, {:style => 'width:99%;'} %>
           <%= text_field_tag "extra_town" %>
           <p class="notice-in fs-flash-in" style="text-align: left; padding: 18px 40px;">Digitare almeno 2
-            caratteri per iniziare la ricerca. Usa la rotella per caricare altre risposte possibili
+            caratteri per iniziare la ricerca. Usa la rotellina del mouse per caricare altre risposte possibili
           </p>
         </div>
       </div>
