--- a/app/views/users/_general.html.erb
+++ b/app/views/users/_general.html.erb
@@ -1,7 +1,4 @@
 <% form_for @user, :builder => TabularFormBuilder do |f| %>
   <%= render :partial => 'form', :locals => { :f => f } %>
-  <% if @user.active? && email_delivery_enabled? -%>
-    <p><label><%= check_box_tag 'send_information', 1, true %> <%= l(:label_send_information) %></label></p>
-  <% end -%>
-  <p><%= submit_tag l(:button_save) %></p>
+  <p class="btn-footer"><%= submit_tag l(:button_save) , :class => 'button-grey'%></p>
 <% end %>
