--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,8 +5,9 @@
   <% if email_delivery_enabled? %>
   <p><label><%= check_box_tag 'send_information', 1, true %> <%= l(:label_send_information) %></label></p>
   <% end %>
-  <p>
-    <%= submit_tag l(:button_create) %>
-    <%= submit_tag l(:button_create_and_continue), :name => 'continue' %>
+    <br>
+  <p class="btn-footer">
+    <%= submit_tag l(:button_create), :class=> 'button-grey'  %>
+
   </p>
 <% end %>
